--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,400;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
 </head>
 <body>
     <div class="resume-page">
@@ -21,8 +21,8 @@
             </section>
         
             <section class="objectives">
-                <h2>Objective</h2>
-                <p>Dedicated Junior Backend developer, focused on continuous learning and growth; 
+                <h2>profile</h2>
+                <p>Dedicated Junior Backend developer with a motivated attitude, focused on continuous learning and growth; 
                     with passion for providing solutions through technology. Holds a B.Eng 
                     degree in Mechanical Engineering.</p>
             </section>
@@ -38,7 +38,7 @@
                             <li>Express.js</li>
                             <li>MongoDB</li>
                             <li>PostgresSQL</li>
-                            <li>SQL</li>
+                            <li></li>
                         </ul>
                     </li>
                     <li>
@@ -47,7 +47,7 @@
                             <li>Good Management</li>
                             <li>Good communication</li>
                             <li>Problem solving</li>
-                            <li></li>
+                            <li>Fast Learner</li>
                             <li></li>
                             <li></li>
                         </ul>
@@ -56,13 +56,13 @@
             </section>
             
             <section class="contact">
-                <h2>Contact</h2>
+                <h2>Contact address</h2>
                 <ul>
                     <li><i class="fa fa-home">&nbsp&nbsp</i>2 Rainbow Street, off Odili Road</li>
-                    <li><a href="ehiheboloaugusta@gmail.com"><i class="fas fa-envelope">&nbsp&nbsp</i>ehiheboloaugusta@gmail.com</a></li>
-                    <li><a href="+2347035283119"><i class="fa fa-phone">&nbsp&nbsp</i>+2347035283119</a></li>
+                    <li><i class="fas fa-envelope">&nbsp&nbsp</i>ehiheboloaugustar@gmail.com</li>
+                    <li><i class="fa fa-phone">&nbsp&nbsp</i>+2347035283119</li>
                     <li><a href="https://github.com/Augusta-E"><i class="fab fa-github" style='font-size:15px'>&nbsp&nbsp&nbsp</i>github.com/Augusta-E</a></li>
-                    <li><a href="#"><i class="fa fa-twitter" style='font-size:15px'>&nbsp&nbsp&nbsp</i>@AugustaE</a></li>
+                    <li><i class="fa fa-twitter" style='font-size:15px'>&nbsp&nbsp&nbsp</i>@AugustaE</li>
                     <li><a href="https://www.linkedin.com/in/augusta-e/"><i class="fa fa-linkedin-square" style='font-size:15px'>&nbsp&nbsp&nbsp</i>linkedin.com/in/augusta-e</a></li>               
                 </ul>
             </section>  
@@ -77,7 +77,7 @@
 
         <div class="column2">
             <section class="experience">
-                <h2>Experience</h2>
+                <h2>Employment history</h2>
                 <ul class="timeline">
             <li class="event">
                 <span class="duration">2020<br>- <br>2021</span>
