made it mobile responsive

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="resume-page">
-        <div class="column">
+        <div class="column_left">
             <section class="resume">
                 <h1>Augusta Ehihebolo</h1>
                 <p>Backend Engineer</p>
@@ -75,7 +75,7 @@
             </section>   
         </div>
 
-        <div class="column2">
+        <div class="column_right">
             <section class="experience">
                 <h2>Employment history</h2>
                 <ul class="timeline">
